[tool.poetry]
name = "MBPython"
version = "0.1.5"
description = "Miniblink binding for python"
authors = ["lochen <1191826896@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lochen88/MBPython"
repository = "https://github.com/lochen88/MBPython"

[tool.poetry.dependencies]
python = "^3.6"
pywin32 = "^228"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
default = true
url = "https://pypi.doubanio.com/simple/"